--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.17.2",
     "fs": "0.0.1-security",
     "joi": "^17.6.0",
     "moment": "^2.29.1",
+    "path": "^0.12.7",
     "read-excel-file": "^5.2.26",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "rtl-arabic": "^1.0.6",
     "sheetjs": "^2.0.0",
+    "tar": "^6.1.11",
     "twilio": "^3.73.1",
     "utf8": "^3.0.0",
     "xlsx": "^0.17.5"
